tests/NormalTests/paczka1/fuzzy1/81580577.err
Error in line 14: frdF81k A329 83,2
Error in line 30: Iu9K26syZ A450 48,5
Error in line 2: BkFqGpaD A329 7,0
Error in line 36: A465 A329 81,1
